--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,65 @@
-// TODO
+.container {
+    max-width: 700px;
+    margin: 80px auto 0;
+
+    img {
+        margin-bottom: 65px;
+    }
+
+    button {
+        color: var(--highlight-pink);
+        background: transparent;
+        border: 0;
+        font-size: 18px;
+        font-weight: 600;
+
+        cursor: pointer;
+    }
+
+}
+
+.post_info {
+    h1 {
+        color: var(--heading-white);
+        
+        font-style: normal;
+        font-weight: bold;
+        font-size: 28px;
+
+        margin-bottom: 8px;
+
+        cursor: pointer;
+    }
+    
+    p {
+        color: var(--body-white);
+
+        font-size: 18px;
+        margin-bottom: 24px;
+    }
+    
+    span {
+        color: var(--info-white);
+    }
+
+    .creation_info {
+        display: flex;
+        flex-direction: row;
+        gap: 26px;
+        
+        span {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            gap: 8px;
+
+            p {
+                font-size: 14px;
+                margin-bottom: 0;
+
+                font-weight: 400;
+            }
+        }
+    }
+}
